<resources>
    <string name="app_name">Proyecto</string>
    <string name="btn_login_facebook">Facebook</string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="btn_text_acceder">Acceder</string>
    <string name="btn_text_registrar">Registrar</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_acceder">Acceder</string>
    <string name="btn_cerrar_sesion">Cerrar Sesión</string>
    <string name="texto_auto_generado">Texto Auto Generado</string>
    <string name="tv_configuration">Configuración</string>
    <string name="tv_title_perfil">Mi Perfil</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="ver_pedido">Ver Pedido</string>
    <string name="ver_productos">Ver Productos</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="a_adir_al_carrito">Añadir al carrito</string>
    <string name="cantidad">Cantidad</string>
    <string name="btn_disminuir">-</string>
    <string name="valor_por_defecto">1</string>
    <string name="btn_aumentar">+</string>
    <string name="img_info">Info de imagen</string>
    <string name="nombre_detalle_producto">Nombre Del Producto</string>
    <string name="detalles">Detalles</string>
    <string name="camion">Camión</string>
    <string name="precio">Precio</string>

</resources>