<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleProductoActivity">

    <TextView
        android:id="@+id/tvDetalleProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/nombre_detalle_producto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/ivImagenProducto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDetalleProducto"
        app:layout_constraintBottom_toTopOf="@+id/tvPrecio"
        />
    <TextView
        android:id="@+id/tvPrecio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/precio"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivImagenProducto"
        app:layout_constraintBottom_toTopOf="@id/lyControlCantidadDetalleProducto"
        />
    <LinearLayout
        android:id="@+id/lyControlCantidadDetalleProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@drawable/forma_rectangulo"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvPrecio"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:layout_marginBottom="10dp"
        >
        <Button
            android:id="@+id/btnDisminuirDetalle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/boton_redondo"
            android:text="@string/btn_disminuir"
            android:padding="1dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etCantidadDetalle"
            android:enabled="false"
            android:inputType="number"
            android:hint="@string/valor_por_defecto"
            android:text="@string/valor_por_defecto"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:autofillHints="1" />

        <Button
            android:id="@+id/btnAumentarDetalle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:text="@string/btn_aumentar"
            android:padding="1dp"
            android:background="@drawable/boton_redondo"
            />

    </LinearLayout>
    <Button
        android:id="@+id/btnAddCarritoDetalle"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/forma_rectangulo"
        android:text="@string/a_adir_al_carrito"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrecio"
        app:layout_constraintStart_toEndOf="@id/lyControlCantidadDetalleProducto"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/tvDetalleEstatico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnAddCarritoDetalle"
        android:textAlignment="textStart"
        android:layout_marginTop="30dp"
        android:text="@string/detalles"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvDetallesProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvDetalleEstatico"
        android:textAlignment="textStart"
        android:layout_margin="12dp"
        android:layout_marginTop="32dp"
        android:text="@string/detalles"
        android:textSize="24sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>