<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">
    <TextView
        android:id="@+id/tvTitlePerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:textSize="24sp"
        android:text="@string/tv_title_perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/lblUsuarioLogeado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/texto_auto_generado"
        app:layout_constraintStart_toStartOf="@id/tvTitlePerfil"
        app:layout_constraintTop_toBottomOf="@id/tvTitlePerfil"
        />
    <Space
        android:id="@+id/espacio"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        app:layout_constraintStart_toStartOf="@id/lblUsuarioLogeado"
        app:layout_constraintTop_toBottomOf="@id/lblUsuarioLogeado"
        app:layout_constraintBottom_toTopOf="@id/lblProvedor"
        />

    <TextView
        android:id="@+id/lblProvedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_auto_generado"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/espacio"
        app:layout_constraintStart_toStartOf="@id/espacio"
        />


    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cerrar_sesion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>